force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/CONVSTA_Table_Regles_Experience_Pro__c.object-meta.xml
<CustomObject>
    <description>Les règles de gestion associées aux stages/contrats</description>
    <label>Table des Règles Expérience Pro</label>
    <nameField>
        <label>Table des Règles Expérience Professionne</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tables des Règles Expérience Pro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>