force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/A_evaluer__c.field-meta.xml
<CustomField>
    <fullName>A_evaluer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le stage doit être évalué</description>
    <inlineHelpText>Indique si le stage doit être évalué</inlineHelpText>
    <label>A évaluer</label>
    <type>Checkbox</type>
</CustomField>