force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Accessible_aux_etudiants__c.field-meta.xml
<CustomField>
    <fullName>Accessible_aux_etudiants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessible aux étudiants</label>
    <type>Checkbox</type>
</CustomField>