force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Afficher_logo_Paul_Bocuse__c.field-meta.xml
<CustomField>
    <fullName>Afficher_logo_Paul_Bocuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afficher le logo Paul Bocuse</label>
    <type>Checkbox</type>
</CustomField>