force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Ann_e_suivante__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_suivante__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique que la table doit être rattachée aux demandes de l&apos;année en cours pour l&apos;année suivante</description>
    <label>Année suivante</label>
    <type>Checkbox</type>
</CustomField>