force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Annee_Application__c.field-meta.xml
<CustomField>
    <fullName>Annee_Application__c</fullName>
    <inlineHelpText>Les 4 premiers caractères du code étudiant des étudiants concernés</inlineHelpText>
    <label>Préfixe du code étudiant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>