force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Anterieur__c.field-meta.xml
<CustomField>
    <fullName>Anterieur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antérieur</label>
    <type>Checkbox</type>
</CustomField>