force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Code_etude__c.field-meta.xml
<CustomField>
    <fullName>Code_etude__c</fullName>
    <label>Code étude / Année actuelle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Programme__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AU2MS</fullName>
            </value>
            <value>
                <fullName>AUBBA</fullName>
            </value>
            <value>
                <fullName>AUBBAC</fullName>
            </value>
            <value>
                <fullName>AUGP</fullName>
            </value>
            <value>
                <fullName>AUMBA</fullName>
            </value>
            <value>
                <fullName>BBA0</fullName>
            </value>
            <value>
                <fullName>BBA1</fullName>
            </value>
            <value>
                <fullName>BBA2</fullName>
            </value>
            <value>
                <fullName>BBA3</fullName>
            </value>
            <value>
                <fullName>BBA4</fullName>
            </value>
            <value>
                <fullName>BBAB1</fullName>
            </value>
            <value>
                <fullName>BBAB2</fullName>
            </value>
            <value>
                <fullName>BBAB3</fullName>
            </value>
            <value>
                <fullName>BBAB4</fullName>
            </value>
            <value>
                <fullName>BBAC1</fullName>
            </value>
            <value>
                <fullName>BBAC2</fullName>
            </value>
            <value>
                <fullName>BBAC3</fullName>
            </value>
            <value>
                <fullName>BBAC4</fullName>
            </value>
            <value>
                <fullName>BBAH1</fullName>
            </value>
            <value>
                <fullName>BBAH2</fullName>
            </value>
            <value>
                <fullName>BBAH3</fullName>
            </value>
            <value>
                <fullName>BBAH4</fullName>
            </value>
            <value>
                <fullName>BBAP0</fullName>
            </value>
            <value>
                <fullName>BBAP1</fullName>
            </value>
            <value>
                <fullName>BBAP2</fullName>
            </value>
            <value>
                <fullName>BBAP3</fullName>
            </value>
            <value>
                <fullName>BBAP4</fullName>
            </value>
            <value>
                <fullName>BBAPS</fullName>
            </value>
            <value>
                <fullName>BBAS</fullName>
            </value>
            <value>
                <fullName>BBAS0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>