force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Convsta_Signataire_delegue_EM__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Signataire_delegue_EM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Si ce champ est renseigné, c&apos;est ce contact qui signera la convention à la place du tuteur emlyon</inlineHelpText>
    <label>Délégation pour le tuteur école</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tables des Règles Expérience Pro</relationshipLabel>
    <relationshipName>Tables_des_R_gles_Exp_rience_Pro</relationshipName>
    <type>Lookup</type>
</CustomField>