force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Convsta_Tuteur_par_defaut__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Tuteur_par_defaut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tuteur emlyon par défaut</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le contact doit être désigné comme Tuteur EM.</errorMessage>
        <filterItems>
            <field>Contact.Convsta_Tuteur_EM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tables des Règles Expérience Pro (Tuteur BBA)</relationshipLabel>
    <relationshipName>Tables_des_R_gles_Exp_rience_Pro1</relationshipName>
    <type>Lookup</type>
</CustomField>