force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Date_De_Demarrage_Au_Plus_Tard__c.field-meta.xml
<CustomField>
    <fullName>Date_De_Demarrage_Au_Plus_Tard__c</fullName>
    <description>La date butoire à laquelle l&apos;étudiant doit commencer son expérience professionnelle.</description>
    <label>Date De Démarrage Au Plus Tard</label>
    <type>Date</type>
</CustomField>