force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Date_Demarrage_Au_Plus_Tot__c.field-meta.xml
<CustomField>
    <fullName>Date_Demarrage_Au_Plus_Tot__c</fullName>
    <description>La date au plus tôt à laquelle l&apos;étudiant a le droit de commencer son stage</description>
    <label>Date De Démarrage Au Plus Tôt</label>
    <type>Date</type>
</CustomField>