force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Date_Jury_Diplome__c.field-meta.xml
<CustomField>
    <fullName>Date_Jury_Diplome__c</fullName>
    <description>La date de jury de diplôme de l&apos;étudiant</description>
    <label>Date de Jury de Diplôme</label>
    <type>Date</type>
</CustomField>