force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Date_Maximum_Fin_Stage__c.field-meta.xml
<CustomField>
    <fullName>Date_Maximum_Fin_Stage__c</fullName>
    <description>La date maximum à laquelle l&apos;étudiant doit avoir terminé son stage</description>
    <label>Date Maximum de Fin de Stage</label>
    <type>Date</type>
</CustomField>