force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Date_Maximum_Reglement_Inscription__c.field-meta.xml
<CustomField>
    <fullName>Date_Maximum_Reglement_Inscription__c</fullName>
    <description>La date maximum à laquelle l&apos;étudiant doit avoir réglé ses frais d&apos;inscription</description>
    <label>Date Maximum Pour Régler l&apos;Inscription</label>
    <type>Date</type>
</CustomField>