force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Duree_Stage_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Duree_Stage_Minimum__c</fullName>
    <description>1 mois = 30 jours</description>
    <label>Durée de Stage Minimum (en jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>