force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Libell_convention_fr__c.field-meta.xml
<CustomField>
    <fullName>Libell_convention_fr__c</fullName>
    <label>Libellé convention fr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>