force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Ne_pas_basculer_la_note_dans_la_Scola__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_basculer_la_note_dans_la_Scola__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas basculer la note dans la Scola</label>
    <type>Checkbox</type>
</CustomField>