force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Ne_pas_faire_signer_le_resp_pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_faire_signer_le_resp_pedagogique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas faire signer le resp pédagogique</label>
    <type>Checkbox</type>
</CustomField>