force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Nom_Responsable_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Nom_Responsable_Pedagogique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>L&apos;identité du responsable pédagogique s&apos;occupant de l&apos;étudiant</description>
    <label>Nom du Responsable Pédagogique</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responsables_Pedagogiques</relationshipName>
    <type>Lookup</type>
</CustomField>