force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Nombre_Mois_Requis_Diplome__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Mois_Requis_Diplome__c</fullName>
    <description>Le nombre de mois d&apos;expérience professionnelle requis pour le diplôme</description>
    <label># de Mois d&apos;Expérience Requis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>