force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <description>Le programme d&apos;étude de l&apos;étudiant, dans le cadre duquel il effectue son expérience professionnelle</description>
    <label>Programme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BBAB</fullName>
            </value>
            <value>
                <fullName>BBAC</fullName>
            </value>
            <value>
                <fullName>BBAP</fullName>
            </value>
            <value>
                <fullName>BBAS</fullName>
            </value>
            <value>
                <fullName>BBASP</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BOOS</fullName>
            </value>
            <value>
                <fullName>BWGE</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>CFT</fullName>
            </value>
            <value>
                <fullName>COSM</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>DBAL</fullName>
            </value>
            <value>
                <fullName>DIBO</fullName>
            </value>
            <value>
                <fullName>DMDS</fullName>
            </value>
            <value>
                <fullName>E2BA</fullName>
            </value>
            <value>
                <fullName>E2MS</fullName>
            </value>
            <value>
                <fullName>EMM</fullName>
            </value>
            <value>
                <fullName>ENVI</fullName>
            </value>
            <value>
                <fullName>ESC</fullName>
            </value>
            <value>
                <fullName>ETD</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>GEP</fullName>
            </value>
            <value>
                <fullName>GIE</fullName>
            </value>
            <value>
                <fullName>GLUX</fullName>
            </value>
            <value>
                <fullName>GMST</fullName>
            </value>
            <value>
                <fullName>HEBM</fullName>
            </value>
            <value>
                <fullName>HMDI</fullName>
            </value>
            <value>
                <fullName>IDEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>