force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Quota_Stage_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Quota_Stage_Maximum__c</fullName>
    <description>Le quota de stage maximum permis par le programme</description>
    <label>Quota de Stage Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>