force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Stage_Exterieur_Pays_Origine__c.field-meta.xml
<CustomField>
    <fullName>Stage_Exterieur_Pays_Origine__c</fullName>
    <description>Est-ce que le stage se déroule à l&apos;extérieur du pays d&apos;origine de l&apos;étudiant?</description>
    <label>Stage A l&apos;Extérieur du Pays d&apos;Origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>