force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Suiveur_requis__c.field-meta.xml
<CustomField>
    <fullName>Suiveur_requis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suiveur requis</label>
    <type>Checkbox</type>
</CustomField>