force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/fields/Volume_academique_annuel__c.field-meta.xml
<CustomField>
    <fullName>Volume_academique_annuel__c</fullName>
    <label>Volume académique annuel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>