force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/validationRules/convsta_resp_pedagogique_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>convsta_resp_pedagogique_obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Convsta_Tuteur_par_defaut__c )</errorConditionFormula>
    <errorDisplayField>Nom_Responsable_Pedagogique__c</errorDisplayField>
    <errorMessage>Vous devez préciser un repsonsable pédagogique</errorMessage>
</ValidationRule>