force-app/main/default/objects/CONVSTA_Table_Regles_Experience_Pro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accessible_aux_etudiants__c</columns>
    <columns>Ne_pas_basculer_la_note_dans_la_Scola__c</columns>
    <columns>Code_etude__c</columns>
    <columns>Programme__c</columns>
    <columns>Annee_Application__c</columns>
    <columns>Nom_Responsable_Pedagogique__c</columns>
    <columns>Ann_e_suivante__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_etude__c</field>
        <operation>equals</operation>
        <value>SCPM1</value>
    </filters>
    <label>All</label>
</ListView>